theoriaypologismou/myanalyzer.output
Terminals unused in grammar

    KW_NIL


State 54 conflicts: 2 reduce/reduce
State 212 conflicts: 1 shift/reduce


Grammar

    0 $accept: begin $end

    1 begin: %empty
    2      | begin const_declaration ';'
    3      | begin var_declaration ';'
    4      | begin func_declaration ';'
    5      | begin begin_func

    6 begin_func: KW_FUNC KW_BEGIN '(' ')' func_body

    7 var_declaration: KW_VAR declarations KW_INT
    8                | KW_VAR declarations KW_REAL
    9                | KW_VAR declarations KW_STRING
   10                | KW_VAR declarations KW_BOOL

   11 declarations: TK_ID
   12             | declarations ',' TK_ID
   13             | TK_ID '=' expr
   14             | declarations ',' TK_ID '=' expr
   15             | TK_ID '=' KW_TRUE
   16             | declarations ',' TK_ID '=' KW_TRUE
   17             | TK_ID '=' KW_FALSE
   18             | declarations ',' TK_ID '=' KW_FALSE
   19             | TK_ID '[' ']'
   20             | TK_ID '[' expr ']'
   21             | declarations ',' TK_ID '[' expr ']'

   22 const_declaration: KW_CONST declarations KW_INT
   23                  | KW_CONST declarations KW_REAL
   24                  | KW_CONST declarations KW_STRING
   25                  | KW_CONST declarations KW_BOOL

   26 arrays_func: '[' ']' KW_INT
   27            | '[' ']' KW_BOOL
   28            | '[' ']' KW_REAL
   29            | '[' ']' KW_STRING

   30 func_declaration: KW_FUNC TK_ID '(' func_args ')' KW_INT func_body
   31                 | KW_FUNC TK_ID '(' func_args ')' KW_BOOL func_body
   32                 | KW_FUNC TK_ID '(' func_args ')' KW_REAL func_body
   33                 | KW_FUNC TK_ID '(' func_args ')' KW_STRING func_body
   34                 | KW_FUNC TK_ID '(' func_args ')' arrays_func func_body
   35                 | KW_FUNC TK_ID '(' func_args ')' func_body

   36 func_args: arg_decl
   37          | func_args ',' arg_decl

   38 arg_decl: %empty
   39         | TK_ID KW_INT
   40         | TK_ID KW_BOOL
   41         | TK_ID KW_REAL
   42         | TK_ID KW_STRING
   43         | TK_ID arrays_func
   44         | TK_ID
   45         | expr

   46 func_body: '{' code_body '}'

   47 code_body: code
   48          | code_body code

   49 code: var_declaration ';'
   50     | const_declaration ';'
   51     | statements

   52 expr: TK_ID
   53     | TK_INT
   54     | TK_FLOAT
   55     | TK_STRING
   56     | '(' expr ')'
   57     | expr '+' expr
   58     | expr '-' expr
   59     | expr '*' expr
   60     | expr '/' expr
   61     | expr '%' expr
   62     | KW_NOT expr
   63     | expr KW_AND expr
   64     | expr KW_OR expr
   65     | expr TK_POWER expr
   66     | '+' expr
   67     | '-' expr
   68     | expr TK_EQUAL expr
   69     | expr TK_LESS expr
   70     | expr '<' expr
   71     | expr '>' expr
   72     | expr TK_MORE expr
   73     | expr TK_NOTEQUAL expr
   74     | function_call
   75     | array_assignment

   76 statements: assignment
   77           | if_statements
   78           | for_statements
   79           | while_statements
   80           | KW_BREAK ';'
   81           | KW_CONTINUE ';'
   82           | return_stmt ';'
   83           | function_call ';'

   84 assignment: TK_ID '=' expr ';'
   85           | array_assignment '=' expr ';'
   86           | TK_ID '=' KW_FALSE ';'
   87           | TK_ID '=' KW_TRUE ';'

   88 array_assignment: TK_ID '[' expr ']'

   89 if_statements: KW_IF '(' expr ')' statements_body
   90              | KW_IF '(' expr ')' statements_body KW_ELSE statements_body

   91 statements_body: statements
   92                | '{' statements_code '}' ';'

   93 statements_code: %empty
   94                | stmt_code

   95 stmt_code: statements
   96          | stmt_code statements

   97 for_statements: KW_FOR '(' for_assignment ';' expr ';' for_assignment ')' statements_body

   98 for_assignment: TK_ID '=' expr

   99 while_statements: KW_WHILE '(' expr ')' statements_body

  100 return_stmt: %empty
  101            | KW_RETURN
  102            | KW_RETURN expr

  103 function_call: TK_ID '(' func_args ')'
  104              | pi_functions

  105 pi_functions: TK_RDSTR '(' ')'
  106             | TK_RDINT '(' ')'
  107             | TK_RDREAL '(' ')'
  108             | TK_WRTSTR '(' ')'
  109             | TK_WRTSTR '(' TK_ID ')'
  110             | TK_WRTSTR '(' TK_STRING ')'
  111             | TK_WRTINT '(' ')'
  112             | TK_WRTINT '(' TK_ID ')'
  113             | TK_WRTINT '(' TK_INT ')'
  114             | TK_WRTREAL '(' ')'
  115             | TK_WRTREAL '(' TK_ID ')'
  116             | TK_WRTREAL '(' TK_FLOAT ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 61
    '(' (40) 6 30 31 32 33 34 35 56 89 90 97 99 103 105 106 107 108 109 110 111 112 113 114 115 116
    ')' (41) 6 30 31 32 33 34 35 56 89 90 97 99 103 105 106 107 108 109 110 111 112 113 114 115 116
    '*' (42) 59
    '+' (43) 57 66
    ',' (44) 12 14 16 18 21 37
    '-' (45) 58 67
    '/' (47) 60
    ';' (59) 2 3 4 49 50 80 81 82 83 84 85 86 87 92 97
    '<' (60) 70
    '=' (61) 13 14 15 16 17 18 84 85 86 87 98
    '>' (62) 71
    '[' (91) 19 20 21 26 27 28 29 88
    ']' (93) 19 20 21 26 27 28 29 88
    '{' (123) 46 92
    '}' (125) 46 92
    error (256)
    TK_ID <str> (258) 11 12 13 14 15 16 17 18 19 20 21 30 31 32 33 34 35 39 40 41 42 43 44 52 84 86 87 88 98 103 109 112 115
    TK_INT <str> (259) 53 113
    TK_FLOAT <str> (260) 54 116
    TK_STRING <str> (261) 55 110
    KW_INT (262) 7 22 26 30 39
    KW_FALSE <str> (263) 17 18 86
    KW_FOR (264) 97
    KW_NIL (265)
    KW_BEGIN (266) 6
    KW_REAL (267) 8 23 28 32 41
    KW_VAR (268) 7 8 9 10
    KW_WHILE (269) 99
    KW_AND (270) 63
    KW_STRING (271) 9 24 29 33 42
    KW_CONST (272) 22 23 24 25
    KW_BREAK (273) 80
    KW_OR (274) 64
    KW_BOOL (275) 10 25 27 31 40
    KW_IF (276) 89 90
    KW_CONTINUE (277) 81
    KW_NOT (278) 62
    KW_TRUE <str> (279) 15 16 87
    KW_ELSE (280) 90
    KW_FUNC (281) 6 30 31 32 33 34 35
    KW_RETURN (282) 101 102
    TK_POWER (283) 65
    TK_EQUAL (284) 68
    TK_NOTEQUAL (285) 73
    TK_LESS (286) 69
    TK_MORE (287) 72
    TK_WRTSTR (288) 108 109 110
    TK_WRTINT (289) 111 112 113
    TK_WRTREAL (290) 114 115 116
    TK_RDSTR (291) 105
    TK_RDINT (292) 106
    TK_RDREAL (293) 107


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    begin (56)
        on left: 1 2 3 4 5
        on right: 0 2 3 4 5
    begin_func <str> (57)
        on left: 6
        on right: 5
    var_declaration <str> (58)
        on left: 7 8 9 10
        on right: 3 49
    declarations <str> (59)
        on left: 11 12 13 14 15 16 17 18 19 20 21
        on right: 7 8 9 10 12 14 16 18 21 22 23 24 25
    const_declaration <str> (60)
        on left: 22 23 24 25
        on right: 2 50
    arrays_func <str> (61)
        on left: 26 27 28 29
        on right: 34 43
    func_declaration <str> (62)
        on left: 30 31 32 33 34 35
        on right: 4
    func_args <str> (63)
        on left: 36 37
        on right: 30 31 32 33 34 35 37 103
    arg_decl <str> (64)
        on left: 38 39 40 41 42 43 44 45
        on right: 36 37
    func_body <str> (65)
        on left: 46
        on right: 6 30 31 32 33 34 35
    code_body <str> (66)
        on left: 47 48
        on right: 46 48
    code <str> (67)
        on left: 49 50 51
        on right: 47 48
    expr <str> (68)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 13 14 20 21 45 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 84 85 88 89 90 97 98 99 102
    statements <str> (69)
        on left: 76 77 78 79 80 81 82 83
        on right: 51 91 95 96
    assignment <str> (70)
        on left: 84 85 86 87
        on right: 76
    array_assignment <str> (71)
        on left: 88
        on right: 75 85
    if_statements <str> (72)
        on left: 89 90
        on right: 77
    statements_body <str> (73)
        on left: 91 92
        on right: 89 90 97 99
    statements_code <str> (74)
        on left: 93 94
        on right: 92
    stmt_code <str> (75)
        on left: 95 96
        on right: 94 96
    for_statements <str> (76)
        on left: 97
        on right: 78
    for_assignment <str> (77)
        on left: 98
        on right: 97
    while_statements <str> (78)
        on left: 99
        on right: 79
    return_stmt <str> (79)
        on left: 100 101 102
        on right: 82
    function_call <str> (80)
        on left: 103 104
        on right: 74 83
    pi_functions <str> (81)
        on left: 105 106 107 108 109 110 111 112 113 114 115 116
        on right: 104


State 0

    0 $accept: . begin $end
    1 begin: . %empty
    2      | . begin const_declaration ';'
    3      | . begin var_declaration ';'
    4      | . begin func_declaration ';'
    5      | . begin begin_func

    $default  reduce using rule 1 (begin)

    begin  go to state 1


State 1

    0 $accept: begin . $end
    2 begin: begin . const_declaration ';'
    3      | begin . var_declaration ';'
    4      | begin . func_declaration ';'
    5      | begin . begin_func
    6 begin_func: . KW_FUNC KW_BEGIN '(' ')' func_body
    7 var_declaration: . KW_VAR declarations KW_INT
    8                | . KW_VAR declarations KW_REAL
    9                | . KW_VAR declarations KW_STRING
   10                | . KW_VAR declarations KW_BOOL
   22 const_declaration: . KW_CONST declarations KW_INT
   23                  | . KW_CONST declarations KW_REAL
   24                  | . KW_CONST declarations KW_STRING
   25                  | . KW_CONST declarations KW_BOOL
   30 func_declaration: . KW_FUNC TK_ID '(' func_args ')' KW_INT func_body
   31                 | . KW_FUNC TK_ID '(' func_args ')' KW_BOOL func_body
   32                 | . KW_FUNC TK_ID '(' func_args ')' KW_REAL func_body
   33                 | . KW_FUNC TK_ID '(' func_args ')' KW_STRING func_body
   34                 | . KW_FUNC TK_ID '(' func_args ')' arrays_func func_body
   35                 | . KW_FUNC TK_ID '(' func_args ')' func_body

    $end      shift, and go to state 2
    KW_VAR    shift, and go to state 3
    KW_CONST  shift, and go to state 4
    KW_FUNC   shift, and go to state 5

    begin_func         go to state 6
    var_declaration    go to state 7
    const_declaration  go to state 8
    func_declaration   go to state 9


State 2

    0 $accept: begin $end .

    $default  accept


State 3

    7 var_declaration: KW_VAR . declarations KW_INT
    8                | KW_VAR . declarations KW_REAL
    9                | KW_VAR . declarations KW_STRING
   10                | KW_VAR . declarations KW_BOOL
   11 declarations: . TK_ID
   12             | . declarations ',' TK_ID
   13             | . TK_ID '=' expr
   14             | . declarations ',' TK_ID '=' expr
   15             | . TK_ID '=' KW_TRUE
   16             | . declarations ',' TK_ID '=' KW_TRUE
   17             | . TK_ID '=' KW_FALSE
   18             | . declarations ',' TK_ID '=' KW_FALSE
   19             | . TK_ID '[' ']'
   20             | . TK_ID '[' expr ']'
   21             | . declarations ',' TK_ID '[' expr ']'

    TK_ID  shift, and go to state 10

    declarations  go to state 11


State 4

   11 declarations: . TK_ID
   12             | . declarations ',' TK_ID
   13             | . TK_ID '=' expr
   14             | . declarations ',' TK_ID '=' expr
   15             | . TK_ID '=' KW_TRUE
   16             | . declarations ',' TK_ID '=' KW_TRUE
   17             | . TK_ID '=' KW_FALSE
   18             | . declarations ',' TK_ID '=' KW_FALSE
   19             | . TK_ID '[' ']'
   20             | . TK_ID '[' expr ']'
   21             | . declarations ',' TK_ID '[' expr ']'
   22 const_declaration: KW_CONST . declarations KW_INT
   23                  | KW_CONST . declarations KW_REAL
   24                  | KW_CONST . declarations KW_STRING
   25                  | KW_CONST . declarations KW_BOOL

    TK_ID  shift, and go to state 10

    declarations  go to state 12


State 5

    6 begin_func: KW_FUNC . KW_BEGIN '(' ')' func_body
   30 func_declaration: KW_FUNC . TK_ID '(' func_args ')' KW_INT func_body
   31                 | KW_FUNC . TK_ID '(' func_args ')' KW_BOOL func_body
   32                 | KW_FUNC . TK_ID '(' func_args ')' KW_REAL func_body
   33                 | KW_FUNC . TK_ID '(' func_args ')' KW_STRING func_body
   34                 | KW_FUNC . TK_ID '(' func_args ')' arrays_func func_body
   35                 | KW_FUNC . TK_ID '(' func_args ')' func_body

    TK_ID     shift, and go to state 13
    KW_BEGIN  shift, and go to state 14


State 6

    5 begin: begin begin_func .

    $default  reduce using rule 5 (begin)


State 7

    3 begin: begin var_declaration . ';'

    ';'  shift, and go to state 15


State 8

    2 begin: begin const_declaration . ';'

    ';'  shift, and go to state 16


State 9

    4 begin: begin func_declaration . ';'

    ';'  shift, and go to state 17


State 10

   11 declarations: TK_ID .  [KW_INT, KW_REAL, KW_STRING, KW_BOOL, ',']
   13             | TK_ID . '=' expr
   15             | TK_ID . '=' KW_TRUE
   17             | TK_ID . '=' KW_FALSE
   19             | TK_ID . '[' ']'
   20             | TK_ID . '[' expr ']'

    '='  shift, and go to state 18
    '['  shift, and go to state 19

    $default  reduce using rule 11 (declarations)


State 11

    7 var_declaration: KW_VAR declarations . KW_INT
    8                | KW_VAR declarations . KW_REAL
    9                | KW_VAR declarations . KW_STRING
   10                | KW_VAR declarations . KW_BOOL
   12 declarations: declarations . ',' TK_ID
   14             | declarations . ',' TK_ID '=' expr
   16             | declarations . ',' TK_ID '=' KW_TRUE
   18             | declarations . ',' TK_ID '=' KW_FALSE
   21             | declarations . ',' TK_ID '[' expr ']'

    KW_INT     shift, and go to state 20
    KW_REAL    shift, and go to state 21
    KW_STRING  shift, and go to state 22
    KW_BOOL    shift, and go to state 23
    ','        shift, and go to state 24


State 12

   12 declarations: declarations . ',' TK_ID
   14             | declarations . ',' TK_ID '=' expr
   16             | declarations . ',' TK_ID '=' KW_TRUE
   18             | declarations . ',' TK_ID '=' KW_FALSE
   21             | declarations . ',' TK_ID '[' expr ']'
   22 const_declaration: KW_CONST declarations . KW_INT
   23                  | KW_CONST declarations . KW_REAL
   24                  | KW_CONST declarations . KW_STRING
   25                  | KW_CONST declarations . KW_BOOL

    KW_INT     shift, and go to state 25
    KW_REAL    shift, and go to state 26
    KW_STRING  shift, and go to state 27
    KW_BOOL    shift, and go to state 28
    ','        shift, and go to state 24


State 13

   30 func_declaration: KW_FUNC TK_ID . '(' func_args ')' KW_INT func_body
   31                 | KW_FUNC TK_ID . '(' func_args ')' KW_BOOL func_body
   32                 | KW_FUNC TK_ID . '(' func_args ')' KW_REAL func_body
   33                 | KW_FUNC TK_ID . '(' func_args ')' KW_STRING func_body
   34                 | KW_FUNC TK_ID . '(' func_args ')' arrays_func func_body
   35                 | KW_FUNC TK_ID . '(' func_args ')' func_body

    '('  shift, and go to state 29


State 14

    6 begin_func: KW_FUNC KW_BEGIN . '(' ')' func_body

    '('  shift, and go to state 30


State 15

    3 begin: begin var_declaration ';' .

    $default  reduce using rule 3 (begin)


State 16

    2 begin: begin const_declaration ';' .

    $default  reduce using rule 2 (begin)


State 17

    4 begin: begin func_declaration ';' .

    $default  reduce using rule 4 (begin)


State 18

   13 declarations: TK_ID '=' . expr
   15             | TK_ID '=' . KW_TRUE
   17             | TK_ID '=' . KW_FALSE
   52 expr: . TK_ID
   53     | . TK_INT
   54     | . TK_FLOAT
   55     | . TK_STRING
   56     | . '(' expr ')'
   57     | . expr '+' expr
   58     | . expr '-' expr
   59     | . expr '*' expr
   60     | . expr '/' expr
   61     | . expr '%' expr
   62     | . KW_NOT expr
   63     | . expr KW_AND expr
   64     | . expr KW_OR expr
   65     | . expr TK_POWER expr
   66     | . '+' expr
   67     | . '-' expr
   68     | . expr TK_EQUAL expr
   69     | . expr TK_LESS expr
   70     | . expr '<' expr
   71     | . expr '>' expr
   72     | . expr TK_MORE expr
   73     | . expr TK_NOTEQUAL expr
   74     | . function_call
   75     | . array_assignment
   88 array_assignment: . TK_ID '[' expr ']'
  103 function_call: . TK_ID '(' func_args ')'
  104              | . pi_functions
  105 pi_functions: . TK_RDSTR '(' ')'
  106             | . TK_RDINT '(' ')'
  107             | . TK_RDREAL '(' ')'
  108             | . TK_WRTSTR '(' ')'
  109             | . TK_WRTSTR '(' TK_ID ')'
  110             | . TK_WRTSTR '(' TK_STRING ')'
  111             | . TK_WRTINT '(' ')'
  112             | . TK_WRTINT '(' TK_ID ')'
  113             | . TK_WRTINT '(' TK_INT ')'
  114             | . TK_WRTREAL '(' ')'
  115             | . TK_WRTREAL '(' TK_ID ')'
  116             | . TK_WRTREAL '(' TK_FLOAT ')'

    TK_ID       shift, and go to state 31
    TK_INT      shift, and go to state 32
    TK_FLOAT    shift, and go to state 33
    TK_STRING   shift, and go to state 34
    KW_FALSE    shift, and go to state 35
    KW_NOT      shift, and go to state 36
    KW_TRUE     shift, and go to state 37
    TK_WRTSTR   shift, and go to state 38
    TK_WRTINT   shift, and go to state 39
    TK_WRTREAL  shift, and go to state 40
    TK_RDSTR    shift, and go to state 41
    TK_RDINT    shift, and go to state 42
    TK_RDREAL   shift, and go to state 43
    '-'         shift, and go to state 44
    '+'         shift, and go to state 45
    '('         shift, and go to state 46

    expr              go to state 47
    array_assignment  go to state 48
    function_call     go to state 49
    pi_functions      go to state 50


State 19
